--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<img src="https://photos-1.dropbox.com/t/2/AABD_Xj0XOBHOuvhOHQPW79uEuCon8M1JnCJBdPVpF_1zQ/12/651872787/jpeg/32x32/1/_/1/2/pasja_smaku-stronawbudowie.jpg/EPKt7qYFGAIgAigC/hZCIsYrALiOnlX1hkAr2e2uHCzxEA8HYU7Ae9otKi2s?size=1280x960&size_mode=3" class="center" style="width: 80%;">
+<img src="http://imagizer.imageshack.us/a/img924/8123/0iWqk4.jpg" class="center" style="width: 80%;">
