Add and configurate capistrano gem

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<img src="http://imagizer.imageshack.us/a/img924/8123/0iWqk4.jpg" class="center" style="width: 80%;">
+<img src="http://imagizer.imageshack.us/a/img924/8123/0iWqk4.jpg" style="width: 80%; margin-left: auto; margin-right: auto; display: block;">
