Change image size

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<img src="http://imagizer.imageshack.us/a/img924/8123/0iWqk4.jpg" class="center">
+<img src="http://imagizer.imageshack.us/a/img924/8123/0iWqk4.jpg" class="center" style="width: 70%;">
