--- a/app/assets/stylesheets/bootstrap-template/business-casual.css
+++ b/app/assets/stylesheets/bootstrap-template/business-casual.css
@@ -11,6 +11,7 @@ body {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    font-weight: 200;
 }
 
 h1,
@@ -69,6 +70,7 @@ hr {
 .brand-name {
     margin: 0;
     font-size: 4em;
+    font-weight: 500;
 }
 
 .tagline-divider {
@@ -109,7 +111,7 @@ footer {
 
 footer p {
     margin: 0;
-    padding: 50px 0;
+    padding: 35px 0;
 }
 
 @media screen and (min-width:768px) {
@@ -119,9 +121,9 @@ footer p {
         padding: 30px 0 10px;
         text-align: center;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 5em;
-        font-weight: 700;
+        font-family: "Pinyon Script","Josefin Slab","Helvetica Neue",Helvetica,Arial,cursive,sans-serif;
+        font-size: 8em;
+        font-weight: 500;
         line-height: normal;
         color: #fff;
     }
@@ -131,7 +133,7 @@ footer p {
     }
 
     .img-left {
-        float: left;
+        float: left;35
         margin-right: 25px;
     }
 
@@ -142,7 +144,7 @@ footer p {
         text-align: center;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
         text-transform: uppercase;
-        font-size: 1.25em;
+        font-size: 2em;
         font-weight: 400;
         letter-spacing: 3px;
         color: #fff;
