Add contackt view

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li>
-          <a href="index.html">O nas</a>
+          <%= link_to "O nas", root_path %>
         </li>
         <li>
           <a href="about.html">Oferta</a>
@@ -30,7 +30,7 @@
           <a href="blog.html">Cennik</a>
         </li>
         <li>
-          <a href="contact.html">Kontakt</a>
+          <%= link_to "Kontakt", contacts_path %>
         </li>
       </ul>
     </div>
