--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,60 @@
-<img src="http://imagizer.imageshack.us/a/img924/8123/0iWqk4.jpg" class="center" style="width: 70%;">
+<div class="container">
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12 text-center">
+        <div id="carousel-example-generic" class="carousel slide">
+          <ol class="carousel-indicators hidden-xs">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+
+          <div class="carousel-inner">
+            <div class="item active">
+              <img class="img-responsive img-full" src="/assets/slide-1.jpg" alt="">
+            </div>
+            <div class="item">
+              <img class="img-responsive img-full" src="/assets/slide-2.jpg" alt="">
+            </div>
+            <div class="item">
+              <img class="img-responsive img-full" src="/assets/slide-3.jpg" alt="">
+            </div>
+          </div>
+
+          <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+            <span class="icon-prev"></span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+            <span class="icon-next"></span>
+          </a>
+        </div>
+
+        <h2 class="brand-before">
+          <small>Witamy na stronie</small>
+        </h2>
+
+        <h1 class="brand-name">Pasja Smaku</h1>
+        <hr class="tagline-divider">
+        <h2>
+          <small>
+            Catering
+          </small>
+        </h2>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          O nas
+        </h2>
+          <hr>
+          <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+      </div>
+    </div>
+  </div>
+</div>
