--- a/app/assets/stylesheets/bootstrap-template/business-casual.css
+++ b/app/assets/stylesheets/bootstrap-template/business-casual.css
@@ -87,9 +87,10 @@ hr {
 }
 
 .intro-text {
+    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     text-transform: uppercase;
     font-size: 1.25em;
-    font-weight: 400;
+    font-weight: 300;
     letter-spacing: 1px;
 }
 
