Add offers index view

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -21,7 +21,7 @@
           <%= link_to "O nas", root_path %>
         </li>
         <li>
-          <a href="about.html">Oferta</a>
+          <%= link_to "Oferta", offers_path %>
         </li>
         <li>
           <a href="blog.html">Diety</a>
