--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -10,6 +10,7 @@
           <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
       </div>
+      <div class="clearfix"></div>
     </div>
   </div>
 
@@ -24,6 +25,7 @@
           <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limitśćąę!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
       </div>
+      <div class="clearfix"></div>
     </div>
   </div>
 </div>
