Add price lists

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -27,7 +27,7 @@
           <%= link_to "Diety", diets_path %>
         </li>
         <li>
-          <a href="blog.html">Cennik</a>
+          <%= link_to "Cennik", price_lists_path %>
         </li>
         <li>
           <%= link_to "Kontakt", contacts_path %>
