--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
-<img src="http://imagizer.imageshack.us/a/img924/8123/0iWqk4.jpg" class="center" style="width: 70%;">
+<%= link_to "https://www.facebook.com/pasjasmakucatering" do %>
+  <img src="assets/strona_w_budowie_face.jpg" class="center" style="width: 70%;">
+<% end %>
