Add texts, images and clean up

--- a/app/views/diets/index.html.erb
+++ b/app/views/diets/index.html.erb
@@ -4,17 +4,15 @@
       <div class="col-lg-12">
         <hr>
         <h2 class="intro-text text-center">
-          Dieta 1200kcal
+          Nasze diety
         </h2>
         <hr>
-      </div>
 
-      <div class="col-md-4">
-        <img class="img-responsive img-border-left" src="assets/slide-2.jpg" alt="">
-      </div>
-      <div class="col-md-8">
-        <p>This is a great place to introduce your company or project and describe what you do.</p>
-        <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
+        <p>Nasze diety opierają się na 5 regularnych, rozsądnie opracowanych objętościowo i stworzonych z
+          najwyższej jakości skadników posiłkach. Powinny być jedzone w odstępie 3-4 godzin, przy czym ostatni
+          posiłek powinien być zjedzony co najmniej 3 godziny przed snem.</p>
+
+        <p>Poniżej zamieszczono przykładowe zdjęcia zestawów dietetycznych wraz z krótkim opisem diety. </p>
       </div>
       <div class="clearfix"></div>
     </div>
@@ -25,17 +23,42 @@
       <div class="col-lg-12">
         <hr>
         <h2 class="intro-text text-center">
-          Dieta 1500kcal
+          Dieta 1200 kcal
         </h2>
         <hr>
       </div>
 
       <div class="col-md-4">
-        <img class="img-responsive img-border-left" src="assets/slide-2.jpg" alt="">
+        <img class="img-responsive img-border-left" src="assets/dieta_4.jpg">
       </div>
       <div class="col-md-8">
-        <p>This is a great place to introduce your company or project and describe what you do.</p>
-        <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
+        <p>Dieta oczyszczająca i odchudzająca oparta jest na pełnowartościowych i urozmaiconych daniach, zapewnia 5
+          smacznych posiłków dziennie. Jest ona odpowiednia dla osób, które spedzają sporo czasu w trybie siedzącym z
+          małą aktywnością fizyczną. Dieta 1200 kcal może być stosowana długotrwale w celu systematycznego oczyszczania
+          organizmu lub osiągnięcia i kontrolowania pożądanej masy ciała.</p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          Dieta 1500 kcal
+        </h2>
+        <hr>
+      </div>
+
+      <div class="col-md-4">
+        <img class="img-responsive img-border-left" src="assets/dieta_5.jpg">
+      </div>
+      <div class="col-md-8">
+        <p>Dieta dostarcza organizmowi niezbędnych składników odżywczych, zachowując jednocześnie odpowiednie proporcje
+          między węglowodanami, białkiem i tłuszczem. Może być stosowana przez dłuższy czas przez każdego zdrowego,
+          dorosłego człowieka. Bez szkody dla organizmu schudną na niej mężczyźni, osoby bardzo otyłe lub wykonujące
+          ciężką fizyczną pracę.</p>
       </div>
       <div class="clearfix"></div>
     </div>
