--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li>
-          <%= link_to "O nas", root_path %>
+          <%= link_to "Info", root_path %>
         </li>
         <li>
           <%= link_to "Oferta", offers_path %>
