--- a/app/views/price_lists/index.html.erb
+++ b/app/views/price_lists/index.html.erb
@@ -7,6 +7,8 @@
           Catering Dietetyczny
         </h2>
         <hr>
+        <p class="text-center">Poniższe kwoty dotyczą 5 daniowego zestawu na jeden dzień.</p>
+        <hr>
       </div>
 
       <div class="col-md-8 col-md-offset-2">
@@ -15,36 +17,67 @@
             <thead>
               <tr>
                 <th>Dieta</th>
-                <th>1-6 dni</th>
-                <th>7-14 dni</th>
-                <th>14-28 dni</th>
+                <th>1 tydzień</th>
+                <th>2 tydzień</th>
+                <th>3 tydzień</th>
+                <th>4 tydzień</th>
               </tr>
             </thead>
 
             <tbody>
               <tr>
                 <td>1200 kcal</td>
-                <td>10zł</td>
-                <td>20zł</td>
-                <td>30zł</td>
+                <td>39zł</td>
+                <td>38zł</td>
+                <td>37zł</td>
+                <td>36zł</td>
               </tr>
 
               <tr>
                 <td>1500 kcal</td>
-                <td>15zł</td>
-                <td>25zł</td>
-                <td>35zł</td>
+                <td>41zł</td>
+                <td>40zł</td>
+                <td>39zł</td>
+                <td>38zł</td>
               </tr>
 
               <tr>
-                <td>1800 kcal</td>
-                <td>20zł</td>
-                <td>30zł</td>
+                <td>1700 kcal</td>
+                <td>43zł</td>
+                <td>42zł</td>
+                <td>41zł</td>
                 <td>40zł</td>
+              </tr>
+
+              <tr>
+                <td>2000 kcal</td>
+                <td>45zł</td>
+                <td>44zł</td>
+                <td>43zł</td>
+                <td>42zł</td>
+              </tr>
+
+              <tr>
+                <td>2300 kcal</td>
+                <td>47zł</td>
+                <td>46zł</td>
+                <td>45zł</td>
+                <td>44zł</td>
               </tr>
             </tbody>
           </table>
         </div>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 text-center">
+        <hr>
+        <p>Zestaw próbny za jedyne 29zł na jeden dzień!</p>
+        <hr>
       </div>
       <div class="clearfix"></div>
     </div>
