--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -9,17 +9,31 @@
         <hr>
       </div>
 
-      <div class="col-md-8">
-        Dowóz realizowany jest w obrębie Dębicy, Nagawczyny, Zawady i Ropczyc
+      <div class="col-md-7">
+        <p>Jeżeli masz jakiekolwiek pytania, dotyczące zamówienia cateringu, dostawy lub oferowanych przez nas diet,
+          prosimy bardzo o kontakt telefoniczny, meilowy lub na facebooku.</p>
       </div>
 
-      <div class="col-md-4">
-        <p>Telefon:
-          <strong>531 402 700</strong>
-        </p>
-        <p>Email:
-          <strong><a href="mailto:">pasjasmaku@o2.pl</a></strong>
-        </p>
+      <div class="col-md-5">
+        <div class="row">
+          <div class="col-xs-4">
+            <p>Telefon:</p>
+            <p>Email:</p>
+            <p>Facebook:</p>
+          </div>
+
+          <div class="col-xs-8">
+            <p>
+              <strong>+48 531 402 700</strong>
+            </p>
+            <p>
+              <strong><a href="mailto:">pasjasmaku@o2.pl</a></strong>
+            </p>
+            <p>
+              <strong><a href="https://www.facebook.com/pasjasmakucatering/">Pasja Smaku Catering</a></strong>
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="clearfix"></div>
