--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,17 +7,25 @@
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
           </ol>
 
           <div class="carousel-inner">
             <div class="item active">
-              <img class="img-responsive img-full" src="/assets/slide-1.jpg" alt="">
+              <img class="img-responsive img-full" src="/assets/slide_1.png">
             </div>
             <div class="item">
-              <img class="img-responsive img-full" src="/assets/slide-2.jpg" alt="">
+              <img class="img-responsive img-full" src="/assets/slide_2.png">
             </div>
             <div class="item">
-              <img class="img-responsive img-full" src="/assets/slide-3.jpg" alt="">
+              <img class="img-responsive img-full" src="/assets/slide_3.png">
+            </div>
+            <div class="item">
+              <img class="img-responsive img-full" src="/assets/slide_4.png">
+            </div>
+            <div class="item">
+              <img class="img-responsive img-full" src="/assets/slide_5.png">
             </div>
           </div>
 
@@ -47,14 +55,14 @@
 
   <div class="row">
     <div class="box">
-      <div class="col-lg-12">
-        <hr>
-        <h2 class="intro-text text-center">
-          O nas
-        </h2>
-          <hr>
-          <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <p class="text-center">Nie masz czasu gotować? Nie masz pomysłu na smaczne i zdrowe posiłki? Chcesz szybko
+          i bezpiecznie schudnąć i uniknąć przy tym efektu jojo? Catering dietetyczny to idealne rozwiązanie dla
+          Ciebie i Twoich bliskich.</p>
+
+        <p class="text-center">Pozwól nam zadbać o swoją linie bez wychodzenia z domu.</p>
+
+        <p class="text-center">Zamów zestaw próbny i przekonaj się już dziś!</p>
       </div>
       <div class="clearfix"></div>
     </div>
