--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,14 +1,19 @@
 <div class="container">
   <div class="row">
     <div class="box">
-      <div class="col-lg-12">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <hr>
         <h2 class="intro-text text-center">
-          Catering dietetyczny
+          Oferujemy
         </h2>
           <hr>
-          <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+          <p>- pieć racjonalnie zaplanowanych posiłków dostosowanych do Państwa potrzeb</p>
+          <p>- liczba kalorii dopasowywana indywidualnie</p>
+          <p>- atrakcyjne i konkurencyjne ceny oraz rabaty</p>
+          <p>- możliwość zamówienia zestawu próbnego za jedyne 29zł na jeden dzień</p>
+          <p>- możliwość ustalenia diety indywidualnej w gabinecie dietetyka</p>
+          <p>- przy zamówieniu bezpłatne porady i opieka dietetyka telefonicznie lub internetowo</p>
+          <p>- gwarantujemy bezpłatną dostawę na terenie Ropczyc, Dębicy i okolic</p>
       </div>
       <div class="clearfix"></div>
     </div>
@@ -16,14 +21,10 @@
 
   <div class="row">
     <div class="box">
-      <div class="col-lg-12">
-        <hr>
-        <h2 class="intro-text text-center">
-          Catering na potrzeby imprez okolicznościowych
-        </h2>
-          <hr>
-          <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limitśćąę!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 text-center">
+        <p>Zacznij delektować się jedzeniem bez gotowania i sprzątania!</p>
+        <p>Skorzystaj z pomocy najlepszych specjalistów w żywieniu oraz ciesz się nową figurą i lepszym
+          samopoczuciem!</p>
       </div>
       <div class="clearfix"></div>
     </div>
