--- a/app/views/diets/index.html.erb
+++ b/app/views/diets/index.html.erb
@@ -29,7 +29,7 @@
       </div>
 
       <div class="col-md-4">
-        <img class="img-responsive img-border-left" src="assets/dieta_4.jpg">
+        <img src="<%= image_path('dieta_4.jpg') %>" class="img-responsive img-border-left">
       </div>
       <div class="col-md-8">
         <p>Dieta oczyszczająca i odchudzająca oparta jest na pełnowartościowych i urozmaiconych daniach, zapewnia 5
@@ -52,7 +52,7 @@
       </div>
 
       <div class="col-md-4">
-        <img class="img-responsive img-border-left" src="assets/dieta_5.jpg">
+        <img src="<%= image_path('dieta_5.jpg') %>" class="img-responsive img-border-left">
       </div>
       <div class="col-md-8">
         <p>Dieta dostarcza organizmowi niezbędnych składników odżywczych, zachowując jednocześnie odpowiednie proporcje
