--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,19 +13,19 @@
 
           <div class="carousel-inner">
             <div class="item active">
-              <img class="img-responsive img-full" src="/assets/slide_1.png">
+              <img src="<%= image_path('slide_1.png') %>" class="img-responsive img-full">
             </div>
             <div class="item">
-              <img class="img-responsive img-full" src="/assets/slide_2.png">
+              <img src="<%= image_path('slide_2.png') %>" class="img-responsive img-full">
             </div>
             <div class="item">
-              <img class="img-responsive img-full" src="/assets/slide_3.png">
+              <img src="<%= image_path('slide_3.png') %>" class="img-responsive img-full">
             </div>
             <div class="item">
-              <img class="img-responsive img-full" src="/assets/slide_4.png">
+              <img src="<%= image_path('slide_4.png') %>" class="img-responsive img-full">
             </div>
             <div class="item">
-              <img class="img-responsive img-full" src="/assets/slide_5.png">
+              <img src="<%= image_path('slide_5.png') %>" class="img-responsive img-full">
             </div>
           </div>
 
