--- a/app/assets/stylesheets/bootstrap-template/business-casual.scss
+++ b/app/assets/stylesheets/bootstrap-template/business-casual.scss
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('/assets/bg.jpg') no-repeat center center fixed;
+    background: url(asset-path('bg.jpg')) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
