--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -7,7 +7,7 @@
           Oferujemy
         </h2>
           <hr>
-          <p>- pieć racjonalnie zaplanowanych posiłków dostosowanych do Państwa potrzeb</p>
+          <p>- pięć racjonalnie zaplanowanych posiłków dostosowanych do Państwa potrzeb</p>
           <p>- liczba kalorii dopasowywana indywidualnie</p>
           <p>- atrakcyjne i konkurencyjne ceny oraz rabaty</p>
           <p>- możliwość zamówienia zestawu próbnego za jedyne 29zł na jeden dzień</p>
