--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -30,7 +30,7 @@
               <strong><a href="mailto:">pasjasmaku@o2.pl</a></strong>
             </p>
             <p>
-              <strong><a href="https://www.facebook.com/pasjasmakucatering/">Pasja Smaku Catering</a></strong>
+              <strong><a href="https://www.facebook.com/pasjasmakucatering/" target="_blank">Pasja Smaku Catering</a></strong>
             </p>
           </div>
         </div>
