--- a/app/views/diets/index.html.erb
+++ b/app/views/diets/index.html.erb
@@ -63,4 +63,113 @@
       <div class="clearfix"></div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          Dieta 1700 kcal
+        </h2>
+        <hr>
+      </div>
+
+      <div class="col-md-4">
+        <img src="<%= image_path('dieta_7.jpg') %>" class="img-responsive img-border-left">
+      </div>
+      <div class="col-md-8">
+        <p>Dieta przeznaczona zarówno dla Pań i Panów o zwiększonej aktywności fizycznej. Program
+          ten zawiera pięć pełnowartościowych posiłków z odpowiednią ilością białek, tłuszczy i węglowodanów,
+          które dostarczają nam niezbędną energię na cały dzień. Jest to odpowiednia kaloryczność dla
+          matek karmiących piersią oraz dla Pań regularnie uprawiających sport.</p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          Dieta 2000 kcal
+        </h2>
+        <hr>
+      </div>
+
+      <div class="col-md-4">
+        <img src="<%= image_path('dieta_8.jpg') %>" class="img-responsive img-border-left">
+      </div>
+      <div class="col-md-8">
+        <p>Jest to dieta o wartości kalorycznej, która spełnia minimalne zapotrzebowanie dla Panów
+          uprawiających sport, bądź ćwiczenia siłowe. Kaloryczność 2000 kcal to startowa dieta dla Panów, którzy rozpoczynają przygodę z redukcją masy ciała. Spełnia ona zapotrzebowanie na większość witamin i składników mineralnych, dzięki czemu mamy więcej energii. </p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          Dieta wegetariańska
+        </h2>
+        <hr>
+      </div>
+
+      <div class="col-md-4">
+        <img src="<%= image_path('dieta_9.jpg') %>" class="img-responsive img-border-left">
+      </div>
+      <div class="col-md-8">
+        <p>Jest to dieta, która spełnia zapotrzebowanie na daną kaloryczność, odpowiednią ilość białek,
+          tłuszczy i węglowodanów z całkowitym wykluczeniem mięsa i ryb. Składnikie te są zamieniane na produkty wegańskie lub wegetariańskie w postaci tofu, nasion strączkowych oraz nabiałów i jaj.
+          Jest to dieta dostępna we wszystkich kalorycznościach</p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          Dieta wegetariańska + ryby
+        </h2>
+        <hr>
+      </div>
+
+      <div class="col-md-4">
+        <img src="<%= image_path('dieta_6.jpg') %>" class="img-responsive img-border-left">
+      </div>
+      <div class="col-md-8">
+        <p>Jest to dieta, która spełnia zapotrzebowanie na daną kaloryczność, odpowiednią ilość białek,
+          tłuszczy i węglowodanów z całkowitym wykluczeniem mięsa. Składnikie te są zamieniane na produkty wegańskie lub wegetariańskie w postaci tofu, nasion strączkowych oraz nabiałów i jaj. Dodatkowo w diecie zawarte są ryby. Jest to dieta dostępna we wszystkich kalorycznościach.</p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          Dieta detox - wg. zasad dr Ewy Dąbrowskiej
+        </h2>
+        <hr>
+      </div>
+
+      <div class="col-md-4">
+        <img src="<%= image_path('dieta_10.jpg') %>" class="img-responsive img-border-left">
+      </div>
+      <div class="col-md-8">
+        <p>Dieta dr Dąbrowskiej jest dwuetapową dietą, której celem jest oczyszczenie organizmy z toksyn i
+          przywrócenie mu właściwej równowagi wewnętrznej. Taka kuracja owocowo warzywna to około 600-800 kcal. Może trwać nawet do 3 tygodni, z dodatkowym tygodniem wyprowadzenia z diety, polegającym na
+          stopniowym wprowadzaniu pojedyńczych składników.</p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
 </div>
