--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -11,9 +11,9 @@
           <p>- liczba kalorii dopasowywana indywidualnie</p>
           <p>- atrakcyjne i konkurencyjne ceny oraz rabaty</p>
           <p>- możliwość zamówienia zestawu próbnego za jedyne 29zł na jeden dzień</p>
-          <p>- możliwość ustalenia diety indywidualnej w gabinecie dietetyka</p>
+          <p>- możliwość ustalenia indywidualnej diety</p>
           <p>- przy zamówieniu bezpłatne porady i opieka dietetyka telefonicznie lub internetowo</p>
-          <p>- gwarantujemy bezpłatną dostawę na terenie Ropczyc, Dębicy i okolic</p>
+          <p>- gwarantujemy bezpłatną dostawę na terenie Dębicy i okolic</p>
       </div>
       <div class="clearfix"></div>
     </div>
