--- a/app/views/price_lists/index.html.erb
+++ b/app/views/price_lists/index.html.erb
@@ -1,13 +1,24 @@
 <div class="container">
   <div class="row">
     <div class="box">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 text-center">
+        <hr>
+        <p>Zestaw próbny za jedyne 29zł na jeden dzień!</p>
+        <hr>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
       <div class="col-lg-12">
         <hr>
         <h2 class="intro-text text-center">
-          Catering Dietetyczny
+          Diety Standard
         </h2>
         <hr>
-        <p class="text-center">Poniższe kwoty dotyczą 5 daniowego zestawu na jeden dzień.</p>
+        <p class="text-center">Poniższe kwoty dotyczą 5 daniowego zestawu na jeden dzień, z diet standard.</p>
         <hr>
       </div>
 
@@ -18,9 +29,9 @@
               <tr>
                 <th>Dieta</th>
                 <th>1 tydzień</th>
-                <th>2 tydzień</th>
-                <th>3 tydzień</th>
-                <th>4 tydzień</th>
+                <th>2 tydzień *</th>
+                <th>3 tydzień *</th>
+                <th>4 tydzień *</th>
               </tr>
             </thead>
 
@@ -58,11 +69,27 @@
               </tr>
 
               <tr>
-                <td>2300 kcal</td>
-                <td>47zł</td>
-                <td>46zł</td>
-                <td>45zł</td>
-                <td>44zł</td>
+                <td colspan="5">
+                  * Po upływie czterech tygodni ceny wracają do początkowych wartości i od początku naliczane są zniżki.
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  - Istnieje możliwość rozszerzenia każdego zestawu o zwiększone białko, za dopłatą 2zł na każdy dzień.
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  - Istnieje możliwość zamiany pieczywa oraz makaronów na produkty bezglutenowe, za dopłatą 2zł na każdy dzień.
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  - Istnieje możliwość zamiany mleka oraz jogurtów na produkty bez laktozy, za dopłatą 2zł na każdy dzień.
+                </td>
               </tr>
             </tbody>
           </table>
@@ -74,10 +101,206 @@
 
   <div class="row">
     <div class="box">
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 text-center">
+      <div class="col-lg-12">
         <hr>
-        <p>Zestaw próbny za jedyne 29zł na jeden dzień!</p>
+        <h2 class="intro-text text-center">
+          Dieta Wegetariańska
+        </h2>
         <hr>
+        <p class="text-center">Poniższe kwoty dotyczą 5 daniowego zestawu wegetariańskiego na jeden dzień.</p>
+        <hr>
+      </div>
+
+      <div class="col-md-8 col-md-offset-2">
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Dieta</th>
+                <th>1 tydzień</th>
+                <th>2 tydzień</th>
+                <th>3 tydzień</th>
+                <th>4 tydzień</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>1200 kcal</td>
+                <td>40zł</td>
+                <td>40zł</td>
+                <td>40zł</td>
+                <td>40zł</td>
+              </tr>
+
+              <tr>
+                <td>1500 kcal</td>
+                <td>42zł</td>
+                <td>42zł</td>
+                <td>42zł</td>
+                <td>42zł</td>
+              </tr>
+
+              <tr>
+                <td>1700 kcal</td>
+                <td>44zł</td>
+                <td>44zł</td>
+                <td>44zł</td>
+                <td>44zł</td>
+              </tr>
+
+              <tr>
+                <td>2000 kcal</td>
+                <td>46zł</td>
+                <td>46zł</td>
+                <td>46zł</td>
+                <td>46zł</td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  - Istnieje możliwość rozszerzenia każdego zestawu o zwiększone białko, za dopłatą 2zł na każdy dzień.
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  - Istnieje możliwość zamiany pieczywa oraz makaronów na produkty bezglutenowe, za dopłatą 2zł na każdy dzień.
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  - Istnieje możliwość zamiany mleka oraz jogurtów na produkty bez laktozy, za dopłatą 2zł na każdy dzień.
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          Dieta Wegetariańska + Ryby
+        </h2>
+        <hr>
+        <p class="text-center">Poniższe kwoty dotyczą 5 daniowego zestawu wegetariańskiego + ryby na jeden dzień.</p>
+        <hr>
+      </div>
+
+      <div class="col-md-8 col-md-offset-2">
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Dieta</th>
+                <th>1 tydzień</th>
+                <th>2 tydzień</th>
+                <th>3 tydzień</th>
+                <th>4 tydzień</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>1200 kcal</td>
+                <td>41zł</td>
+                <td>41zł</td>
+                <td>41zł</td>
+                <td>41zł</td>
+              </tr>
+
+              <tr>
+                <td>1500 kcal</td>
+                <td>43zł</td>
+                <td>43zł</td>
+                <td>43zł</td>
+                <td>43zł</td>
+              </tr>
+
+              <tr>
+                <td>1700 kcal</td>
+                <td>45zł</td>
+                <td>45zł</td>
+                <td>45zł</td>
+                <td>45zł</td>
+              </tr>
+
+              <tr>
+                <td>2000 kcal</td>
+                <td>47zł</td>
+                <td>47zł</td>
+                <td>47zł</td>
+                <td>47zł</td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  - Istnieje możliwość rozszerzenia każdego zestawu o zwiększone białko, za dopłatą 2zł na każdy dzień.
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  - Istnieje możliwość zamiany pieczywa oraz makaronów na produkty bezglutenowe, za dopłatą 2zł na każdy dzień.
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  - Istnieje możliwość zamiany mleka oraz jogurtów na produkty bez laktozy, za dopłatą 2zł na każdy dzień.
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          Dieta Detox
+        </h2>
+        <hr>
+        <p class="text-center">Poniższe kwoty dotyczą 5 daniowego zestawu detox na jeden dzień.</p>
+        <hr>
+      </div>
+
+      <div class="col-md-8 col-md-offset-2">
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Dieta</th>
+                <th>1 tydzień</th>
+                <th>2 tydzień</th>
+                <th>3 tydzień</th>
+                <th>4 tydzień</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>Detox</td>
+                <td>43zł</td>
+                <td>43zł</td>
+                <td>43zł</td>
+                <td>43zł</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
       <div class="clearfix"></div>
     </div>
