--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,7 @@
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
             <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="5"></li>
           </ol>
 
           <div class="carousel-inner">
@@ -16,7 +17,7 @@
               <img src="<%= image_path('slide_1.png') %>" class="img-responsive img-full">
             </div>
             <div class="item">
-              <img src="<%= image_path('slide_2.png') %>" class="img-responsive img-full">
+              <img src="<%= image_path('slide_2.jpg') %>" class="img-responsive img-full">
             </div>
             <div class="item">
               <img src="<%= image_path('slide_3.png') %>" class="img-responsive img-full">
@@ -26,6 +27,9 @@
             </div>
             <div class="item">
               <img src="<%= image_path('slide_5.png') %>" class="img-responsive img-full">
+            </div>
+            <div class="item">
+              <img src="<%= image_path('slide_6.jpg') %>" class="img-responsive img-full">
             </div>
           </div>
 
