Change price list

--- a/app/views/price_lists/index.html.erb
+++ b/app/views/price_lists/index.html.erb
@@ -3,7 +3,7 @@
     <div class="box">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 text-center">
         <hr>
-        <p>Zestaw próbny za jedyne 29zł na jeden dzień!</p>
+        <p>Zestaw próbny dla nowych klientów w cenie 29zł na jeden dzień!</p>
         <hr>
       </div>
       <div class="clearfix"></div>
@@ -27,68 +27,79 @@
           <table class="table">
             <thead>
               <tr>
-                <th>Dieta</th>
-                <th>1 tydzień</th>
-                <th>2 tydzień *</th>
-                <th>3 tydzień *</th>
-                <th>4 tydzień *</th>
+                <th colspan="5" class="text-center">
+                  Ilość zamawianych dni
+                </th>
+              </tr>
+              <tr>
+                <th>Kaloryczność</th>
+                <th>1-7</th>
+                <th>8-14</th>
+                <th>15-21</th>
+                <th>22<</th>
               </tr>
             </thead>
 
             <tbody>
               <tr>
                 <td>1200 kcal</td>
+                <td>40zł</td>
                 <td>39zł</td>
                 <td>38zł</td>
                 <td>37zł</td>
-                <td>36zł</td>
               </tr>
 
               <tr>
                 <td>1500 kcal</td>
+                <td>42zł</td>
                 <td>41zł</td>
                 <td>40zł</td>
                 <td>39zł</td>
-                <td>38zł</td>
               </tr>
 
               <tr>
                 <td>1700 kcal</td>
+                <td>44zł</td>
                 <td>43zł</td>
                 <td>42zł</td>
                 <td>41zł</td>
-                <td>40zł</td>
               </tr>
 
               <tr>
                 <td>2000 kcal</td>
+                <td>46zł</td>
                 <td>45zł</td>
                 <td>44zł</td>
                 <td>43zł</td>
-                <td>42zł</td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  * Po upływie czterech tygodni ceny wracają do początkowych wartości i od początku naliczane są zniżki.
+                  * zestaw bez glutenu (makarony i nabiał) + 2zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  - Istnieje możliwość rozszerzenia każdego zestawu o zwiększone białko, za dopłatą 2zł na każdy dzień.
+                  * zestaw bez laktozy + 2zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  - Istnieje możliwość zamiany pieczywa oraz makaronów na produkty bezglutenowe, za dopłatą 2zł na każdy dzień.
+                  * owocowy deserek do zestawu + 6zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  - Istnieje możliwość zamiany mleka oraz jogurtów na produkty bez laktozy, za dopłatą 2zł na każdy dzień.
+                  * zwiększone białko w posiłkach + 2zł
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  * dodatkowa opłata za wykluczenie lub zamianę składnika + 1zł dziennie za składnik
                 </td>
               </tr>
             </tbody>
@@ -116,11 +127,16 @@
           <table class="table">
             <thead>
               <tr>
-                <th>Dieta</th>
-                <th>1 tydzień</th>
-                <th>2 tydzień</th>
-                <th>3 tydzień</th>
-                <th>4 tydzień</th>
+                <th colspan="5" class="text-center">
+                  Ilość zamawianych dni
+                </th>
+              </tr>
+              <tr>
+                <th>Kaloryczność</th>
+                <th>1-7</th>
+                <th>8-14</th>
+                <th>15-21</th>
+                <th>22<</th>
               </tr>
             </thead>
 
@@ -159,19 +175,31 @@
 
               <tr>
                 <td colspan="5">
-                  - Istnieje możliwość rozszerzenia każdego zestawu o zwiększone białko, za dopłatą 2zł na każdy dzień.
+                  * zestaw bez glutenu (makarony i nabiał) + 2zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  - Istnieje możliwość zamiany pieczywa oraz makaronów na produkty bezglutenowe, za dopłatą 2zł na każdy dzień.
+                  * zestaw bez laktozy + 2zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  - Istnieje możliwość zamiany mleka oraz jogurtów na produkty bez laktozy, za dopłatą 2zł na każdy dzień.
+                  * owocowy deserek do zestawu + 6zł
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  * zwiększone białko w posiłkach + 2zł
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  * dodatkowa opłata za wykluczenie lub zamianę składnika + 1zł dziennie za składnik
                 </td>
               </tr>
             </tbody>
@@ -199,11 +227,16 @@
           <table class="table">
             <thead>
               <tr>
-                <th>Dieta</th>
-                <th>1 tydzień</th>
-                <th>2 tydzień</th>
-                <th>3 tydzień</th>
-                <th>4 tydzień</th>
+                <th colspan="5" class="text-center">
+                  Ilość zamawianych dni
+                </th>
+              </tr>
+              <tr>
+                <th>Kaloryczność</th>
+                <th>1-7</th>
+                <th>8-14</th>
+                <th>15-21</th>
+                <th>22<</th>
               </tr>
             </thead>
 
@@ -242,19 +275,31 @@
 
               <tr>
                 <td colspan="5">
-                  - Istnieje możliwość rozszerzenia każdego zestawu o zwiększone białko, za dopłatą 2zł na każdy dzień.
+                  * zestaw bez glutenu (makarony i nabiał) + 2zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  - Istnieje możliwość zamiany pieczywa oraz makaronów na produkty bezglutenowe, za dopłatą 2zł na każdy dzień.
+                  * zestaw bez laktozy + 2zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  - Istnieje możliwość zamiany mleka oraz jogurtów na produkty bez laktozy, za dopłatą 2zł na każdy dzień.
+                  * owocowy deserek do zestawu + 6zł
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  * zwiększone białko w posiłkach + 2zł
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="5">
+                  * dodatkowa opłata za wykluczenie lub zamianę składnika + 1zł dziennie za składnik
                 </td>
               </tr>
             </tbody>
@@ -270,7 +315,7 @@
       <div class="col-lg-12">
         <hr>
         <h2 class="intro-text text-center">
-          Dieta Detox
+          Dieta Detox wg Dr Dąbrowskiej
         </h2>
         <hr>
         <p class="text-center">Poniższe kwoty dotyczą 5 daniowego zestawu detox na jeden dzień.</p>
@@ -282,19 +327,20 @@
           <table class="table">
             <thead>
               <tr>
-                <th>Dieta</th>
-                <th>1 tydzień</th>
-                <th>2 tydzień</th>
-                <th>3 tydzień</th>
-                <th>4 tydzień</th>
+                <th colspan="3" class="text-center">
+                  Ilość zamawianych dni
+                </th>
+              </tr>
+              <tr>
+                <th>Kaloryczność</th>
+                <th>1-7</th>
+                <th>8-14</th>
               </tr>
             </thead>
 
             <tbody>
               <tr>
-                <td>Detox</td>
-                <td>43zł</td>
-                <td>43zł</td>
+                <td>600-800kcal</td>
                 <td>43zł</td>
                 <td>43zł</td>
               </tr>
