--- a/app/views/price_lists/index.html.erb
+++ b/app/views/price_lists/index.html.erb
@@ -10,6 +10,20 @@
     </div>
   </div>
 
+  <%# Remove after this date %>
+  <% if Date.new(2018,4,5) > Date.current %>
+    <div class="row">
+      <div class="box">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 text-center">
+          <hr>
+          <p>Cennik ważny od 05.04.2018r</p>
+          <hr>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+    </div>
+  <% end %>
+
   <div class="row">
     <div class="box">
       <div class="col-lg-12">
