--- a/app/views/price_lists/index.html.erb
+++ b/app/views/price_lists/index.html.erb
@@ -327,6 +327,48 @@
   <div class="row">
     <div class="box">
       <div class="col-lg-12">
+        <hr>rvm use ruby --defaul
+        <h2 class="intro-text text-center">
+          Dieta Detox wg Dr Dąbrowskiej
+        </h2>
+        <hr>
+        <p class="text-center">Poniższe kwoty dotyczą 5 daniowego zestawu detox na jeden dzień.</p>
+        <hr>
+      </div>
+
+      <div class="col-md-8 col-md-offset-2">
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th colspan="3" class="text-center">
+                  Ilość zamawianych dni
+                </th>
+              </tr>
+              <tr>
+                <th>Kaloryczność</th>
+                <th>1-7</th>
+                <th>8-14</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>600-800kcal</td>
+                <td>43zł</td>
+                <td>43zł</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
         <hr>
         <h2 class="intro-text text-center">
           Dieta Sportowa
@@ -365,7 +407,7 @@
 
               <tr>
                 <td colspan="5">
-                  * nie obowiazuje zestaw probny
+                  * nie obowiązuje zestaw próbny
                 </td>
               </tr>
 
@@ -373,48 +415,6 @@
                 <td colspan="5">
                   * dodatkowa opłata za wykluczenie lub zamianę składnika + 1zł dziennie za składnik
                 </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="clearfix"></div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="box">
-      <div class="col-lg-12">
-        <hr>rvm use ruby --defaul
-        <h2 class="intro-text text-center">
-          Dieta Detox wg Dr Dąbrowskiej
-        </h2>
-        <hr>
-        <p class="text-center">Poniższe kwoty dotyczą 5 daniowego zestawu detox na jeden dzień.</p>
-        <hr>
-      </div>
-
-      <div class="col-md-8 col-md-offset-2">
-        <div class="table-responsive">
-          <table class="table">
-            <thead>
-              <tr>
-                <th colspan="3" class="text-center">
-                  Ilość zamawianych dni
-                </th>
-              </tr>
-              <tr>
-                <th>Kaloryczność</th>
-                <th>1-7</th>
-                <th>8-14</th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <tr>
-                <td>600-800kcal</td>
-                <td>43zł</td>
-                <td>43zł</td>
               </tr>
             </tbody>
           </table>
