--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -32,6 +32,9 @@
         <li>
           <%= link_to "Kontakt", contacts_path %>
         </li>
+        <li>
+          <%= link_to "Regulamin", terms_path %>
+        </li>
       </ul>
     </div>
   </div>
