Add google meta

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="TKvq47q0PfbpC5-y15TQ50ak3PxnuvkbV1e6xK_TOFE" />
 
     <title>Pasja Smaku Catering</title>
 
