--- a/app/views/price_lists/index.html.erb
+++ b/app/views/price_lists/index.html.erb
@@ -3,7 +3,7 @@
     <div class="box">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 text-center">
         <hr>
-        <p>Zestaw próbny dla nowych klientów w cenie 29zł na jeden dzień!</p>
+        <p class="bold">Zestaw próbny dla nowych klientów w cenie 29zł na jeden dzień!</p>
         <hr>
       </div>
       <div class="clearfix"></div>
@@ -11,12 +11,12 @@
   </div>
 
   <%# Remove after this date %>
-  <% if Date.new(2018,4,5) > Date.current %>
+  <% if Date.new(2018,8,27) > Date.current %>
     <div class="row">
       <div class="box">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 text-center">
           <hr>
-          <p>Cennik ważny od 05.04.2018r</p>
+          <p class="bold">Cennik obowiązuje od 27.08.2018r</p>
           <hr>
         </div>
         <div class="clearfix"></div>
@@ -28,7 +28,7 @@
     <div class="box">
       <div class="col-lg-12">
         <hr>
-        <h2 class="intro-text text-center">
+        <h2 class="intro-text text-center" style="font-weight: bold;">
           Diety Standard
         </h2>
         <hr>
@@ -57,34 +57,34 @@
             <tbody>
               <tr>
                 <td>1200 kcal</td>
-                <td>40zł</td>
-                <td>39zł</td>
-                <td>38zł</td>
-                <td>37zł</td>
+                <td>44zł</td>
+                <td>43zł</td>
+                <td>42zł</td>
+                <td>41zł</td>
               </tr>
 
               <tr>
                 <td>1500 kcal</td>
-                <td>42zł</td>
-                <td>41zł</td>
-                <td>40zł</td>
-                <td>39zł</td>
-              </tr>
-
-              <tr>
-                <td>1700 kcal</td>
-                <td>44zł</td>
-                <td>43zł</td>
-                <td>42zł</td>
-                <td>41zł</td>
-              </tr>
-
-              <tr>
-                <td>2000 kcal</td>
                 <td>46zł</td>
                 <td>45zł</td>
                 <td>44zł</td>
                 <td>43zł</td>
+              </tr>
+
+              <tr>
+                <td>1700 kcal</td>
+                <td>48zł</td>
+                <td>47zł</td>
+                <td>46zł</td>
+                <td>45zł</td>
+              </tr>
+
+              <tr>
+                <td>2000 kcal</td>
+                <td>50zł</td>
+                <td>49zł</td>
+                <td>48zł</td>
+                <td>47zł</td>
               </tr>
 
               <tr>
@@ -101,7 +101,7 @@
 
               <tr>
                 <td colspan="5">
-                  * owocowy deserek do zestawu + 6zł
+                  * owocowy deserek do zestawu + 7zł
                 </td>
               </tr>
 
@@ -128,7 +128,7 @@
     <div class="box">
       <div class="col-lg-12">
         <hr>
-        <h2 class="intro-text text-center">
+        <h2 class="intro-text text-center" style="font-weight: bold;">
           Dieta Wegetariańska
         </h2>
         <hr>
@@ -157,33 +157,33 @@
             <tbody>
               <tr>
                 <td>1200 kcal</td>
-                <td>40zł</td>
-                <td>40zł</td>
-                <td>40zł</td>
+                <td>43zł</td>
+                <td>42zł</td>
+                <td>41zł</td>
                 <td>40zł</td>
               </tr>
 
               <tr>
                 <td>1500 kcal</td>
-                <td>42zł</td>
-                <td>42zł</td>
-                <td>42zł</td>
+                <td>45zł</td>
+                <td>44zł</td>
+                <td>43zł</td>
                 <td>42zł</td>
               </tr>
 
               <tr>
                 <td>1700 kcal</td>
-                <td>44zł</td>
-                <td>44zł</td>
-                <td>44zł</td>
+                <td>47zł</td>
+                <td>46zł</td>
+                <td>45zł</td>
                 <td>44zł</td>
               </tr>
 
               <tr>
                 <td>2000 kcal</td>
-                <td>46zł</td>
-                <td>46zł</td>
-                <td>46zł</td>
+                <td>49zł</td>
+                <td>48zł</td>
+                <td>47zł</td>
                 <td>46zł</td>
               </tr>
 
@@ -201,7 +201,7 @@
 
               <tr>
                 <td colspan="5">
-                  * owocowy deserek do zestawu + 6zł
+                  * owocowy deserek do zestawu + 7zł
                 </td>
               </tr>
 
@@ -228,7 +228,7 @@
     <div class="box">
       <div class="col-lg-12">
         <hr>
-        <h2 class="intro-text text-center">
+        <h2 class="intro-text text-center" style="font-weight: bold;">
           Dieta Wegetariańska + Ryby
         </h2>
         <hr>
@@ -257,33 +257,33 @@
             <tbody>
               <tr>
                 <td>1200 kcal</td>
-                <td>41zł</td>
-                <td>41zł</td>
-                <td>41zł</td>
+                <td>44zł</td>
+                <td>43zł</td>
+                <td>42zł</td>
                 <td>41zł</td>
               </tr>
 
               <tr>
                 <td>1500 kcal</td>
-                <td>43zł</td>
-                <td>43zł</td>
-                <td>43zł</td>
+                <td>46zł</td>
+                <td>45zł</td>
+                <td>44zł</td>
                 <td>43zł</td>
               </tr>
 
               <tr>
                 <td>1700 kcal</td>
-                <td>45zł</td>
-                <td>45zł</td>
-                <td>45zł</td>
+                <td>48zł</td>
+                <td>47zł</td>
+                <td>46zł</td>
                 <td>45zł</td>
               </tr>
 
               <tr>
                 <td>2000 kcal</td>
-                <td>47zł</td>
-                <td>47zł</td>
-                <td>47zł</td>
+                <td>50zł</td>
+                <td>49zł</td>
+                <td>48zł</td>
                 <td>47zł</td>
               </tr>
 
@@ -301,7 +301,7 @@
 
               <tr>
                 <td colspan="5">
-                  * owocowy deserek do zestawu + 6zł
+                  * owocowy deserek do zestawu + 7zł
                 </td>
               </tr>
 
@@ -328,7 +328,7 @@
     <div class="box">
       <div class="col-lg-12">
         <hr>
-        <h2 class="intro-text text-center">
+        <h2 class="intro-text text-center" style="font-weight: bold;">
           Dieta Detox wg Dr Dąbrowskiej
         </h2>
         <hr>
@@ -336,27 +336,24 @@
         <hr>
       </div>
 
-      <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-4 col-md-offset-4">
         <div class="table-responsive">
           <table class="table">
             <thead>
               <tr>
-                <th colspan="3" class="text-center">
-                  Ilość zamawianych dni
+                <th colspan="2" class="text-center">
+                  Cena jednodniowego zestawu
                 </th>
               </tr>
               <tr>
-                <th>Kaloryczność</th>
-                <th>1-7</th>
-                <th>8-14</th>
+                <th colspan="2">Kaloryczność</th>
               </tr>
             </thead>
 
             <tbody>
               <tr>
                 <td>600-800kcal</td>
-                <td>43zł</td>
-                <td>43zł</td>
+                <td>46zł</td>
               </tr>
             </tbody>
           </table>
@@ -370,7 +367,7 @@
     <div class="box">
       <div class="col-lg-12">
         <hr>
-        <h2 class="intro-text text-center">
+        <h2 class="intro-text text-center" style="font-weight: bold;">
           Dieta Sportowa
         </h2>
         <hr>
@@ -378,35 +375,28 @@
         <hr>
       </div>
 
-      <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-4 col-md-offset-4">
         <div class="table-responsive">
           <table class="table">
             <thead>
               <tr>
-                <th colspan="5" class="text-center">
-                  Ilość zamawianych dni
+                <th colspan="2" class="text-center">
+                  Cena jednodniowego zestawu
                 </th>
               </tr>
               <tr>
-                <th>Kaloryczność</th>
-                <th>1-7</th>
-                <th>8-14</th>
-                <th>15-21</th>
-                <th>22<</th>
+                <th colspan="2">Kaloryczność</th>
               </tr>
             </thead>
 
             <tbody>
               <tr>
                 <td>3500 kcal</td>
-                <td>75zł</td>
-                <td>75zł</td>
-                <td>75zł</td>
-                <td>75zł</td>
+                <td>70zł</td>
               </tr>
 
               <tr>
-                <td colspan="5">
+                <td colspan="2">
                   * nie obowiązuje zestaw próbny
                 </td>
               </tr>
